[2019-04-25 16:00:16.564] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-25 16:00:16.564] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-25 16:00:16.564] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-25 16:00:16.564] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-25 16:00:58.523] [logger] [info] Material 0 was added to project A Great Movie