@@ -18,6 +18,21 @@
             "summary": "A super hero does stuff again",
             "title": "A Great Movie"
         },
+        "boxOfficeReports":
+        [
+            {
+                "id": 1,
+                "weekNumber": 1,
+                "ticketsSold": 23829,
+                "revenue": 43324829.25
+            },
+            {
+                "id": 2,
+                "weekNumber": 2,
+                "ticketsSold": 249043,
+                "revenue": 38429420.36
+            }
+        ],
         "materials": [
             {
                 "additionalLanguageTracks": [
